--- a/src/pollsproj/polls/templates/polls/index.html
+++ b/src/pollsproj/polls/templates/polls/index.html
@@ -6,6 +6,8 @@
         <title>Questions</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'polls/style.css' %}">
     </head>
     <body>
         {% if latest_questions %}
